--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type='text/css'>
     <title>Space Botanical Garden</title>
+    <link href="image/icon.png" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
     <h1 id="title" style='font-family: "CirrusCumulus"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</h1>
