--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="image/icon.png" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
-    <h1 id="title" style='font-family: "CirrusCumulus"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</h1>
-    <h2 style='font-family: "CirrusCumulus"; color: white; text-align: center;'>Click on the ticket to enter the botanical garden.</h2>
-    <a href="https://app.gather.town/invite?token=ONWSOP4wKY_WXeEKeds5YU4Vx5cMuO5B">
+    <h1 id="title" style='font-family: "FuturaStd-Medium"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</h1>
+    <h2 style='font-family: "FuturaStd-Book"; color: white; text-align: center;'>Click on the ticket to enter the botanical garden.</h2>
+    <a href="https://app.gather.town/invite?token=07nFf5N1j1JCXqxioF_Y5RBJCQ0bJNIC">
     <img src="image/ticket_1.png" style="max-width: 100%; height:auto; display: block; margin: 0 auto;" onmouseover="this.src='image/ticket_2.png'" onmouseout="this.src='image/ticket_1.png'">
         </a>
 
-    <p style='font-family: "Sligoil-Micro"; color: #00ff00; text-align: center;'>You can enter again after you leave.<br>
+    <p style='font-family: "FuturaStd-Medium"; color: #00ff00; text-align: center;'>You can enter again after you leave.<br>
         The botanical garden has a capacity of 25 people. If you can't enter, wait a little bit and try again!
         <br><br><br><br><br></p>
 
