--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="image/icon.png" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
-    <h1 id="title" style='font-family: "FuturaStd-Medium"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</h1>
-    <h2 style='font-family: "FuturaStd-Book"; color: white; text-align: center;'>Click on the ticket to enter the botanical garden.</h2>
+    <p id="title" style='font-family: "FuturaStd-Medium"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</p>
+    <p style='font-family: "FuturaStd-Book"; color: white; text-align: center;'>Click on the ticket to enter the botanical garden.</p>
     <a href="https://app.gather.town/invite?token=07nFf5N1j1JCXqxioF_Y5RBJCQ0bJNIC">
     <img src="image/ticket_1.png" style="max-width: 100%; height:auto; display: block; margin: 0 auto;" onmouseover="this.src='image/ticket_2.png'" onmouseout="this.src='image/ticket_1.png'">
         </a>
