--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id="title" style='font-family: "FuturaStd-Medium"; color: #00ff00; font-size: 67px; text-align: center;'>You have a ticket!</h1>
     <h2 style='font-family: "FuturaStd-Book"; color: white; text-align: center;'>Click on the ticket to enter the botanical garden.</h2>
-    <a href="https://app.gather.town/invite?token=07nFf5N1j1JCXqxioF_Y5RBJCQ0bJNIC">
+    <a href="https://app.gather.town/app/kFR8iR8OSL9uGmX4/space%20botanical%20garden">
     <img src="image/ticket_1.png" style="max-width: 100%; height:auto; display: block; margin: 0 auto;" onmouseover="this.src='image/ticket_2.png'" onmouseout="this.src='image/ticket_1.png'">
         </a>
 
